# DevTeam

./: README.md  prompt.md  pyproject.toml
dev_team/: agent.py
dev_team/.adk/: session.db
tools/: access_plan.py  create_folder.py  exit_code_loop.py  exit_prompt_loop.py  get_prompt.py  list_code_files.py  plan.md  read_code.py  read_prompt.py  save_code.py  save_prompt.py  send_update.py
